--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Panda Commerce</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- styels -->
+    <link rel="stylesheet" href="styel.css">
 </head>
 
 <body>
@@ -44,7 +46,7 @@
         <section class="mt-5">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item active border rounded bg-info p-5">
+                    <div class="carousel-item active border rounded panda-bg-info p-5">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center ">
                                 <div>
@@ -55,7 +57,7 @@
                                         This is the best headphone in the world for people who just want to waste time
                                         in front of funky world.</p>
                                     <h1>$1200</h1>
-                                    <div class="btn btn-warning">Buy Now</div>
+                                    <div class="btn panda-btn-buy-now">Buy Now</div>
                                 </div>
                             </div>
                             <div class="col-lg-5">
@@ -63,7 +65,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item active border rounded bg-info p-5">
+                    <div class="carousel-item active border rounded panda-bg-info p-5">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center ">
                                 <div>
@@ -74,7 +76,7 @@
                                         This is the best headphone in the world for people who just want to waste time
                                         in front of funky world.</p>
                                     <h1>$600</h1>
-                                    <div class="btn btn-warning">Buy Now</div>
+                                    <div class="btn panda-btn-buy-now">Buy Now</div>
                                 </div>
                             </div>
                             <div class="col-lg-5">
@@ -82,7 +84,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item active border rounded bg-info p-5">
+                    <div class="carousel-item active border rounded panda-bg-info p-5">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center ">
                                 <div>
@@ -94,7 +96,7 @@
                                         in
                                         front of funky world.</p>
                                     <h1>$400</h1>
-                                    <div class="btn btn-warning">Buy Now</div>
+                                    <div class="btn panda-btn-buy-now">Buy Now</div>
                                 </div>
                             </div>
                             <div class="col-lg-5">
@@ -121,7 +123,7 @@
         <!-- categoris start -->
         <section>
             <div class="container text-center my-5">
-                <div class="row g-2">
+                <div class="row g-4 categoris">
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="p-3 border bg-warning rounded-3 d-flex align-items-center justify-content-aroun">
                             <h1 class="text-white">Watch</h1>
@@ -162,7 +164,7 @@
 
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Boy Now</div>
+                            <div class="btn panda-btn-buy-now">Boy Now</div>
                         </div>
                     </div>
                 </div>
@@ -176,7 +178,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Boy Now</div>
+                            <div class="btn panda-btn-buy-now">Boy Now</div>
                         </div>
                     </div>
                 </div>
@@ -191,7 +193,7 @@
                                 height action.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Boy Now</div>
+                            <div class="btn panda-btn-buy-now">Boy Now</div>
                         </div>
                     </div>
                 </div>
@@ -213,7 +215,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Boy Now</div>
+                            <div class="btn panda-btn-buy-now">Boy Now</div>
                         </div>
                     </div>
                 </div>
@@ -227,7 +229,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Boy Now</div>
+                            <div class="btn panda-btn-buy-now">Boy Now</div>
                         </div>
                     </div>
                 </div>
@@ -242,7 +244,7 @@
                                 height action.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Boy Now</div>
+                            <div class="btn panda-btn-buy-now">Boy Now</div>
                         </div>
                     </div>
                 </div>
@@ -252,7 +254,7 @@
         <!-- Bag end -->
         <!-- subscribe start -->
         <section style="height: 300px;"
-            class="container rounded-3 d-flex justify-content-center align-items-center bg-info" id="sub">
+            class="container rounded-3 d-flex justify-content-center align-items-center panda-bg-info" id="sub">
             <div>
                 <h2>LET'S STAY IN TOUCH</h2>
                 <p>Get updates on sales, specials and more</p>
@@ -260,7 +262,8 @@
                     <div class="mb-3">
 
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-primary btn panda-btn-buy-now">Submit</button>
+
                 </form>
             </div>
         </section>
