--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
                         </div>
                         <div class="m-3">
-                            <div class="btn panda-btn-buy-now">Boy Now</div>
+                            <div class="btn panda-btn-buy-now">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -178,7 +178,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn panda-btn-buy-now">Boy Now</div>
+                            <div class="btn panda-btn-buy-now">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -193,7 +193,7 @@
                                 height action.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn panda-btn-buy-now">Boy Now</div>
+                            <div class="btn panda-btn-buy-now">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -215,7 +215,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn panda-btn-buy-now">Boy Now</div>
+                            <div class="btn panda-btn-buy-now">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -229,7 +229,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn panda-btn-buy-now">Boy Now</div>
+                            <div class="btn panda-btn-buy-now">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -244,7 +244,7 @@
                                 height action.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn panda-btn-buy-now">Boy Now</div>
+                            <div class="btn panda-btn-buy-now">Buy Now</div>
                         </div>
                     </div>
                 </div>
